@@ -1,3 +1,10 @@
+2013-09-14  Jim Fowler  <jrf@Biblion>
+
+	* Tools/bookentry/mainWindow.py
+	(BookEntry.setVolumeNumberInteractive): Added
+	setVolumeNumberInteractive() function using QInputDialog()
+	class. Associated menu item also added.
+
 2013-05-25  Jim Fowler  <jrf@Biblion>
 
 	* Tools/bookentry/symbols.txt: added a, e, i with macron and
